# better-ci

./: .env.example  .gitignore  README.md  better_ci_config.py  betterci_workflow.py  ci.py  cloud_demo_workflow.py  docker-compose.yaml  pyproject.toml
.better-ci-env/: pyvenv.cfg
.betterci/demo_cache/: artifact.txt
cloud/: Dockerfile  pyproject.toml  schema.sql
cloud/app/: db.py  main.py  models.py  redisq.py  settings.py
examples/my-app/: README.md  betterci_workflow.py  pyproject.toml
examples/my-app/src/myapp/: __init__.py  calculator.py  formatter.py
examples/my-app/tests/: test_calculator.py  test_formatter.py
git_facts/: git.py
src/: dag.py  dsl.py  model.py  model_test.py  runner.py
src/UNKNOWN.egg-info/: SOURCES.txt
src/betterci/: __init__.py  cache.py  cli.py  dag.py  dsl.py  model.py  runner.py
src/betterci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/betterci/agent/: __init__.py  agent.py  api_client.py  executor.py  models.py
src/betterci/git_facts/: git.py
src/betterci/step_workflows/: artifacts.py  docker.py  lint.py  test.py
src/betterci/ui/: __init__.py  console.py
src/git_facts/: git.py
tests/: test_artifacts.py  test_cache.py  test_dsl.py  test_integration.py  test_model.py  test_runner.py
